tests/ui/dyn-compatibility/sized-2.stderr
error[E0038]: the trait `Bar` is not dyn compatible
  --> $DIR/sized-2.rs:10:31
   |
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                               ^^^^^^^ `Bar` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/sized-2.rs:5:18
   |
LL | trait Bar
   |       --- this trait is not dyn compatible...
LL |     where Self : Sized
   |                  ^^^^^ ...because it requires `Self: Sized`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
